# scec2

./: .gitignore  README.md  controller.py  custom_event.py  ics_creator.py  main.py  model.py  parser.py  prompt.py  pyproject.toml  test_input.txt  tmp.txt  view.py
