[tool.poetry]
name = "scec2"
version = "0.1.0"
description = "Smart calendar event creator"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kivy = "^2.3.1"
langchain = "^0.3.14"
langchain-ollama = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
